<resources>
    <string name="app_name">funnynose</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="drawer_user_image">Ваша аватарка</string>

    <string name="menu_events">Мероприятия</string>
    <string name="menu_chat">Чат</string>
    <string name="menu_users">Пользователи</string>
    <string name="menu_settings">Настройки</string>

    <string name="other_city">Другой город</string>
    <string name="sort_type">Сортировать по</string>

    <string name="go_back_btn">Назад</string>
    <string name="continue_btn">Продолжить</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="email">E-mail</string>
    <string name="city">Город</string>
    <string name="reg_by_dima">Ещё нет аккаунта? Зарегистрируйтесь!</string>
    <string name="enter">Вход</string>
    <string name="password">Пароль</string>
    <string name="phone">Номер телефона</string>
    <string name="auth_by_dima">Уже есть аккаунт? Просто войдите!</string>
    <string name="repeat_pass">Повторите пароль</string>
    <string name="alias">Псевдоним</string>
    <string name="select_city">Выберите ваш город: </string>
    <string name="birthday">Выбрать день рождения</string>
    <string name="select_first_what">Выбрать дату первого участия</string>
    <string name="end_registration">Завершить регистрацию</string>

    <string name="write_message">Введите сообщение</string>

    <string name="users_last_participation">Последнее участие:\t</string>
    <string name="users_avatarka">Аватарка пользователя</string>

    <string name="select_event_date_time">Выбрать дату и время</string>
    <string name="select_date_dialog_name">Выбрать дату</string>
    <string name="select_time_dialog_name">Выбрать время</string>
    <string name="save_changed">Сохранить изменения</string>
    <string name="event_title">Заголовок мероприятия</string>
    <string name="event_describe">Описание мероприятия</string>
    <string name="event_duration">Приблизительная продолжительность: </string>
    <string name="load_more">Загрузка</string>
    <string name="load_fail">Ошибка загрузки</string>
</resources>
